infra/k8s/auth-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth
        image: jayarajdocker/auth
        resources:
          limits:
            memory: "256Mi"
            cpu: "1000m"
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata: 
  name: auth-svc
spec:
  selector:
    app: auth
  ports: 
    - name: auth
      protocol: TCP
      port: 3000
      targetPort: 3000
